# stage_ros2

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  stageros.cpp
src/: stageros.cpp
world/: cave-robots.world  cave.world  cave_seven_robots.world  cave_three_robots-robots.world  cave_three_robots.world  hallway.world
